# Fill-Game

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  analyze_mem.py  experiment_results.txt  fillgame.qrc  generate_qrc.py  linux_build.sh  minimax_alphabeta_before.txt  run_experiments.sh
.devcontainer/: devcontainer.json
.github/workflows/: c-cpp.yml  label.yml
include/gui/: board_cell.h  helper.h  info_dock.h  input_dialog.h  ip_settings.h  main_window.h  main_window_menu_bar.h  new_game_window.h  popup_selection.h  popup_window.h  settings.h  tcp_client.h  tcp_server.h  worker.h
include/solver/: constraint.h  dfpn.h  game.h  helper.h  mcts.h  minimax.h  negamax.h  node.h  pns.h  pns_node.h
resource/custom_qss/: info_dock.qss
resource/html/: about.html  rules.html
src/: CMakeLists.txt  gui_main.cpp  main.cpp  solver_main.cpp
src/gui/: board_cell.cpp  helper.cpp  info_dock.cpp  input_dialog.cpp  ip_settings.cpp  main_window.cpp  main_window_menu_bar.cpp  new_game_window.cpp  popup_selection.cpp  popup_window.cpp  settings.cpp  tcp_client.cpp  tcp_server.cpp  worker.cpp
src/solver/: CMakeLists.txt  constraint.cpp  dfpn.cpp  fillgame.cpp  game.cpp  helper.cpp  mcts.cpp  minimax.cpp  negamax.cpp  node.cpp  pns.cpp  pns_node.cpp
test/: CMakeLists.txt  README.md  algorithm_test_cases.h  alphabeta_test.h  dfpn_test.h  experiments.cpp  game_string_test.h  helper.cpp  helper.h  minimax_alphabeta_test.h  minimax_alphabeta_tt_test.h  minimax_test.h  negamax_alphabeta_test.h  negamax_alphabeta_tt_test.h  negamax_test.h  plot.py  plots.py  pns_test.h  solver_test.cpp  test_main.cpp
test/algorithms/: algorithm_test_cases.h  dfpn_test.h  mcts_test.h  minimax_alphabeta_test.h  minimax_alphabeta_tt_test.h  minimax_test.h  negamax_alphabeta_test.h  negamax_alphabeta_tt_test.h  negamax_test.h  pns_test.h
test/other_tests/: README.md  agent_fight.cpp  experiments.cpp  twoD_vs_oneD.cpp
